add README.md to testdocker/fortune

--- a/testdocker/fortunes/Dockerfile
+++ b/testdocker/fortunes/Dockerfile
@@ -1,4 +1,9 @@
+# Dockerfile for demo
 FROM ubuntu
-RUN echo "deb http://cn.archive.ubuntu.com/ubuntu precise main universe" > /etc/apt/sources.list
-RUN apt-get update -y && apt-get install -y fortunes cowsay
-CMD /usr/games/fortune -a | /usr/games/cowsay
+MAINTAINER Kevin Qu <quchunguang@gmail.com>
+ENV PATH /usr/games:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+ADD README.md /
+RUN echo "deb http://cn.archive.ubuntu.com/ubuntu trusty main universe" > /etc/apt/sources.list
+RUN apt-get update
+RUN apt-get install -y fortunes cowsay
+CMD fortune -a | cowsay
